Changes in version 1.5 (...12.2008)

 - Terrain heightmap and texture were flipped in order to draw them as expected (looking onto the terrain from high above will just look like the actual texture/heightmap).

 - Significant internal change to the way that FPS camera jump speed and collision response animator gravity interact.  The behaviour is now much more realistic, but it will require you to adjust your jump speed and gravity.

 - Skybox won't be culled anymore by nearplane or farplane.

 - BBoxes of animated meshes (skinned meshes) are updated again.

 - Lost devices (as found with D3D) are properly handled now. So the screen can be resized or minimized without crashing the app.

 - Renamed IGUIElement::setRelativePosition(const core::rect<f32>& r) to IGUIElement::setRelativePositionProportional(), as it has radically different functionality from setRelativePosition(const core::rect<s32>& r)

 - Added IGUIElement::setRelativePosition(const core::position2di & position) to set a new position while retaining the existing height and width.

 - Many Collada fixes. z_up coords are supported now, texture coords are properly loaded. Transparency is supported.

 - Camera scene node rotation and target can now be bound together so that changing one automatically changes the other (as the FPS camera has always done). See ICameraSceneNode::bindTargetAndRotation()

 - Removed the extra libpng files for OSX. OSX now also uses the default libpng.

 - Enhanced PCX support with some more color formats and write support.

 - Fixed LMTS problems with extra data in files.

 - Removed VS6 .dsw / .dsp project files - VS6 is no longer supported.

 - Particles can be scaled during animations. Particle scaling needs to happen in the emitter now, instead of in the Particle system scene node. Deprecation methods will guide the user.

 - ISceneNode::setParent and addChild now updates node SceneManager pointers if the node was from another SceneManager.
