@@ -23,12 +23,11 @@ CLightSceneNode::CLightSceneNode(ISceneNode* parent, ISceneManager* mgr, s32 id,
 	setDebugName("CLightSceneNode");
 	#endif
 
-	LightData.Radius = radius;
 	LightData.DiffuseColor = color;
-
 	// set some useful specular color
 	LightData.SpecularColor = color.getInterpolated(video::SColor(255,255,255,255),0.7f);
 
+	setRadius(radius);
 	doLightRecalc();
 }
 
@@ -102,6 +101,62 @@ video::SLight& CLightSceneNode::getLightData()
 const core::aabbox3d<f32>& CLightSceneNode::getBoundingBox() const
 {
 	return BBox;
+}
+
+
+//! Sets the light's radius of influence.
+/** Outside this radius the light won't lighten geometry and cast no
+shadows. Setting the radius will also influence the attenuation, setting
+it to (0,1/radius,0). If you want to override this behavior, set the
+attenuation after the radius.
+\param radius The new radius. */
+void CLightSceneNode::setRadius(f32 radius)
+{
+	LightData.Radius=radius;
+	LightData.Attenuation.set(0.f, 1.f/radius, 0.f);
+}
+
+
+//! Gets the light's radius of influence.
+/** \return The current radius. */
+f32 CLightSceneNode::getRadius() const
+{
+	return LightData.Radius;
+}
+
+
+//! Sets the light type.
+/** \param type The new type. */
+void CLightSceneNode::setLightType(video::E_LIGHT_TYPE type)
+{
+	LightData.Type=type;
+}
+
+
+//! Gets the light type.
+/** \return The current light type. */
+video::E_LIGHT_TYPE CLightSceneNode::getLightType() const
+{
+	return LightData.Type;
+}
+
+
+//! Sets whether this light casts shadows.
+/** Enabling this flag won't automatically cast shadows, the meshes
+will still need shadow scene nodes attached. But one can enable or
+disable distinct lights for shadow casting for performance reasons.
+\param shadow True if this light shall cast shadows. */
+void CLightSceneNode::enableCastShadow(bool shadow)
+{
+	LightData.CastShadows=shadow;
+}
+
+
+//! Check whether this light casts shadows.
+/** \return True if light would cast shadows, else false. */
+bool CLightSceneNode::getCastShadow() const
+{
+	return LightData.CastShadows;
 }
 
 
